name:                hpong
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mchaver/hpong#readme
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II
maintainer:          mchaver@gmail.com
copyright:           PRIVATE
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hpong
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , FTGL
                     , OpenGLRaw
                     , GLURaw
                     , GLFW-b >= 1.0.0
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mchaver/hpong
